dep variable, ignore build

--- a/meson.build
+++ b/meson.build
@@ -4,5 +4,8 @@ src = [
   'opencl-stub.c',
 ]
 
-libopencl_stub_lib = shared_library(meson.project_name(),
+opencl_stub_lib = shared_library(meson.project_name(),
   src, link_args: [ '-ldl' ], install: true)
+
+opencl_stub_dep = declare_dependency(link_with: opencl_stub_lib,
+  include_directories: include_directories('.'))
